reworking code to be modular, loaded in GIS data

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RBMM = {\"WALKING\": \"WALKING\",\n",
+    "RBMM = {     \"WALKING\": \"WALKING\",\n",
     "             \"RUNNING\" : \"WALKING\", \n",
     "             \"CYCLING\" : \"CYCLING\",\n",
     "             \"BICYCLING\": \"CYCLING\",\n",
@@ -318,7 +318,20 @@
     "        8 : 'WALKING', \n",
     "        9 : 'INVALID', \n",
     "        10 : 'AUTOMOTIVE', \n",
-    "        11 : 'AUTOMOTIVE'}"
+    "        11 : 'AUTOMOTIVE', \n",
+    "         \"WALKING\": \"WALKING\",\n",
+    "         \"RUNNING\" : \"WALKING\", \n",
+    "         \"CYCLING\" : \"CYCLING\",\n",
+    "         \"BICYCLING\": \"CYCLING\",\n",
+    "         \"ESCOOTER\": \"CYCLING\", \n",
+    "         \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
+    "         \"BUS\": \"AUTOMOTIVE\",\n",
+    "         \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "         \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "         \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "         \"CAR\": \"AUTOMOTIVE\",\n",
+    "         \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
+    "         \"INVALID\" : \"INVALID\"}"
    ]
   },
   {
@@ -344,7 +357,20 @@
     "        3 : 'AUTOMOTIVE', \n",
     "        4 : 'TRAIN', \n",
     "        5 : 'AUTOMOTIVE', \n",
-    "        6 : 'AUTOMOTIVE'}"
+    "        6 : 'AUTOMOTIVE', \n",
+    "         \"WALKING\": \"WALKING\",\n",
+    "         \"RUNNING\" : \"WALKING\", \n",
+    "         \"CYCLING\" : \"CYCLING\",\n",
+    "         \"BICYCLING\": \"CYCLING\",\n",
+    "         \"ESCOOTER\": \"CYCLING\", \n",
+    "         \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
+    "         \"BUS\": \"AUTOMOTIVE\",\n",
+    "         \"TRAIN\": \"TRAIN\",\n",
+    "         \"LIGHT_RAIL\": \"TRAIN\",\n",
+    "         \"SUBWAY\": \"TRAIN\",\n",
+    "         \"CAR\": \"AUTOMOTIVE\",\n",
+    "         \"AIR_OR_HSR\": \"TRAIN\",\n",
+    "         \"INVALID\" : \"INVALID\"}"
    ]
   },
   {
@@ -367,6 +393,7 @@
     "                if 'data' in ss.keys():\n",
     "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
+    "                    ss['mode'] = ss['sensed_mode']\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "                gts_dur = 0\n",
     "                for gts in trip['gts_timeline']:\n",
@@ -415,9 +442,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_binary_raw_data(os):\n",
-    "    BASE_MODE = RBMM\n",
-    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAHFDC', [pv_la, pv_ucb, pv_sj], BASE_MODE)).fillna(0)\n",
+    "def get_binary_raw_data(os, pv, BMM):\n",
+    "    BASE_MODE = BMM\n",
+    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAHFDC', pv, BASE_MODE)).fillna(0)\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
     "    d = df.reset_index(drop=True)\n",
@@ -425,7 +452,7 @@
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
     "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())\n",
-    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAMFDC', [pv_la, pv_ucb, pv_sj], BASE_MODE)).fillna(0)\n",
+    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAMFDC', pv, BASE_MODE)).fillna(0)\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
     "    d = df.reset_index(drop=True)\n",
@@ -433,7 +460,7 @@
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
     "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())\n",
-    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'MAHFDC', [pv_la, pv_ucb, pv_sj], BASE_MODE)).fillna(0)\n",
+    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'MAHFDC', pv, BASE_MODE)).fillna(0)\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
     "    d = df.reset_index(drop=True)\n",
@@ -577,25 +604,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_raw_cm(os):\n",
+    "def get_raw_cm(os, pv):\n",
     "    if os == 'ios':\n",
-    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAHFDC', [pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAHFDC', pv)).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'RUNNING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAMFDC', [pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAMFDC', pv)).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'RUNNING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix(os, 'MAHFDC', [pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix(os, 'MAHFDC', pv)).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'RUNNING', 'AUTOMOTIVE']).style.to_latex())\n",
     "    if os == 'android':\n",
-    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAHFDC', [pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAHFDC', pv)).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAMFDC', [pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix(os, 'HAMFDC', pv)).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix(os, 'MAHFDC', [pv_la, pv_sj, pv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix(os, 'MAHFDC', pv)).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())"
    ]
@@ -607,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rf_cm(os):\n",
+    "def get_rf_cm(os, BMM):\n",
     "    if os == 'ios':\n",
     "        df = pd.DataFrame(get_confusion_matrix('ios', 'HAHFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
@@ -691,10 +718,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d09234d",
+   "id": "73e84299",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gisv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "gisv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "gisv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -719,7 +750,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_binary_raw_data('ios')"
+    "get_binary_raw_data('ios', [pv_la, pv_sj, pv_ucb], RBMM)"
    ]
   },
   {
@@ -729,7 +760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_binary_raw_data('android')"
+    "get_binary_raw_data('android', [pv_la, pv_sj, pv_ucb], RBMM)"
    ]
   },
   {
@@ -759,7 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_raw_cm('ios')"
+    "get_raw_cm('ios', [pv_la, pv_sj, pv_ucb])"
    ]
   },
   {
@@ -769,7 +800,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_raw_cm('android')"
+    "get_raw_cm('android',[pv_la, pv_sj, pv_ucb] )"
    ]
   },
   {
@@ -778,6 +809,66 @@
    "metadata": {},
    "source": [
     "#### Cleaned data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09f5024c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_binary_raw_data('ios', [cv_la, cv_sj, cv_ucb], CBMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5986152c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_binary_raw_data('android', [cv_la, cv_sj, cv_ucb], CBMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6f8e99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('ios', [cv_la, cv_sj, cv_ucb], CBMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b3db628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('android', [cv_la, cv_sj, cv_ucb], CBMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd9c4aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_raw_cm('ios', [cv_la, cv_sj, cv_ucb])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5ec89bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_raw_cm('android', [cv_la, cv_sj, cv_ucb] )"
    ]
   },
   {
@@ -859,10 +950,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7053d6d",
+   "id": "e96fc1b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "get_rf_binary('ios',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0d45eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_binary('android')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed08598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('ios', [gisv_la, gisv_sj, gisv_ucb], IBMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f8ad79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('android', [gisv_la, gisv_sj, gisv_ucb], IBMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d624e9db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_cm('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac1334b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_cm('android')"
+   ]
   }
  ],
  "metadata": {
