changed binary metrics to reflect an (interpolated) cumulative sum function. Now, the binary classifiers are based of distance

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -66,14 +66,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25aba739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Metrics helpers\n",
+    "import emeval.metrics.dist_calculations as emd\n",
+    "import emeval.metrics.reference_trajectory as emr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "234c622b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "pd.options.display.float_format = '{:.6f}'.format\n",
-    "import arrow\n",
-    "import numpy as np"
+    "import arrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748b57dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import scipy.interpolate\n",
+    "import scipy.integrate"
    ]
   },
   {
@@ -96,6 +120,8 @@
    "outputs": [],
    "source": [
     "# For maps\n",
+    "import geopandas as gpd\n",
+    "import shapely as shp\n",
     "import folium\n",
     "import branca.element as bre"
    ]
@@ -206,6 +232,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e910124f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_reference_trajectory_input_tree(pv):\n",
+    "    ref_tree = {}\n",
+    "    \n",
+    "    for phone_os, phone_map in pv.map().items():\n",
+    "        for phone_label, phone_detail_map in phone_map.items():\n",
+    "            for (r_idx, r) in enumerate(phone_detail_map[\"evaluation_ranges\"]):\n",
+    "                if r[\"eval_role_base\"] != \"accuracy_control\":\n",
+    "                    continue\n",
+    "                for (tr_idx, tr) in enumerate(r[\"evaluation_trip_ranges\"]):\n",
+    "                    for (sr_idx, sr) in enumerate(tr[\"evaluation_section_ranges\"]):\n",
+    "                        # This is a Shapely LineString\n",
+    "                        section_gt_leg = pv.spec_details.get_ground_truth_for_leg(tr[\"trip_id_base\"], sr[\"trip_id_base\"], sr[\"start_ts\"], sr[\"end_ts\"])\n",
+    "                        section_gt_shapes = gpd.GeoSeries(eisd.SpecDetails.get_shapes_for_leg(section_gt_leg))\n",
+    "                        if len(section_gt_shapes) == 1:\n",
+    "                            print(\"No ground truth route for %s %s, must be polygon, skipping...\" % (tr[\"trip_id_base\"], sr[\"trip_id_base\"]))\n",
+    "                            assert section_gt_leg[\"type\"] != \"TRAVEL\", \"For %s, %s, %s, %s, %s found type %s\" % (phone_os, phone_label, r_idx, tr_idx, sr_idx, section_gt_leg[\"type\"])\n",
+    "                            continue\n",
+    "                        if len(sr['location_df']) == 0:\n",
+    "                            print(\"No sensed locations found, role = %s skipping...\" % (r[\"eval_role_base\"]))\n",
+    "                            # assert r[\"eval_role_base\"] == \"power_control\", \"Found no locations for %s, %s, %s, %s, %s\" % (phone_os, phone_label, r_idx, tr_idx, sr_idx)\n",
+    "                            continue\n",
+    "                            \n",
+    "                        print(\"Processing travel leg %s, %s, %s, %s, %s\" %\n",
+    "                              (phone_os, phone_label, r[\"eval_role_base\"], tr[\"trip_id_base\"], sr[\"trip_id_base\"]))\n",
+    "                        sec_name = tr[\"trip_id_base\"] + \"/\" + sr[\"trip_id_base\"] + \"_\" + str(r_idx)\n",
+    "                        if sec_name not in ref_tree:\n",
+    "                            ref_tree[sec_name] = {\n",
+    "                                \"trip_id\": tr[\"trip_id_base\"],\n",
+    "                                \"section_id\": sr[\"trip_id_base\"],\n",
+    "                                \"run\": r_idx,\n",
+    "                                \"ground_truth\": {\n",
+    "                                    \"leg\": section_gt_leg\n",
+    "                                }\n",
+    "                            }\n",
+    "                        \n",
+    "                        assert sec_name in ref_tree\n",
+    "                        e = ref_tree[sec_name]\n",
+    "                        # This is a GeoDataFrame\n",
+    "                        # section_measured_points = get_travel_trajectory(sr['location_df'], polygons)\n",
+    "                        section_measured_points = sr[\"location_df\"]\n",
+    "                        if \"temporal_control\" not in e:\n",
+    "                            e[\"temporal_control\"] = {}\n",
+    "                            e[\"start_ts\"] = sr[\"start_ts\"]\n",
+    "                            e[\"end_ts\"] = sr[\"end_ts\"]\n",
+    "                        e[\"temporal_control\"][phone_os] = sr\n",
+    "    return ref_tree\n",
+    "\n",
+    "def fill_ref_tree_entry(pv, e):\n",
+    "    print(\"Considering entry %s %s %s\" % (e[\"trip_id\"], e[\"section_id\"], e[\"run\"]))\n",
+    "    curr_tz = pv.spec_details.eval_tz\n",
+    "    assert \"android\" in e[\"temporal_control\"] and \"ios\" in e[\"temporal_control\"]\n",
+    "    (e[\"reference_algo\"], e[\"reference_df\"]) = emr.final_ref_ensemble(e, 25, tz=curr_tz)\n",
+    "\n",
+    "def get_reference_trajectory_tree(pv, ref_tree_root):\n",
+    "    curr_ref_tree = get_reference_trajectory_input_tree(pv)\n",
+    "    ref_tree_root[pv.spec_details.CURR_SPEC_ID] = curr_ref_tree\n",
+    "    [fill_ref_tree_entry(pv, e) for e in curr_ref_tree.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d90fa1c5",
    "metadata": {},
    "outputs": [],
@@ -219,9 +311,7 @@
     "            continue\n",
     "        for phone_label, phone_detail_map in phone_map.items():\n",
     "            if \"control\" in phone_detail_map[\"role\"]:\n",
-    "#                 print(\"Ignoring %s phone %s since they are always on\" % (phone_detail_map[\"role\"], phone_label))\n",
     "                continue\n",
-    "            # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
     "            for r in phone_detail_map[\"evaluation_ranges\"]:\n",
     "                if r['eval_role_base'] != role:\n",
     "                    continue\n",
@@ -237,10 +327,7 @@
     "                                                                                  tr['end_ts'])\n",
     "                        \n",
     "                        if section_gt_leg[\"type\"] == \"WAITING\":\n",
-    "#                             print(\"Skipping WAITING section %s %s with potential partway transitions\" %\n",
-    "#                                   (tr[\"trip_id\"], section[\"trip_id\"]))\n",
     "                            continue\n",
-    "                        ## and now we have the gt mode!\n",
     "                        gts = {'start_ts': section['start_ts'], \n",
     "                               'end_ts': section['end_ts'], \n",
     "                               'mode': section_gt_leg['mode']}\n",
@@ -381,7 +468,7 @@
    "outputs": [],
    "source": [
     "def get_binary_class_in_sec(os, role, pv, BASE_MODE):\n",
-    "    if type(pv) is not list: pv - [pv]\n",
+    "    if type(pv) is not list: pv = [pv]\n",
     "    trips = []\n",
     "    for v in pv:\n",
     "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
@@ -389,30 +476,51 @@
     "    for trip in trips:\n",
     "        for mode in set(BASE_MODE.values()):\n",
     "            for ss in trip['ss_timeline']:\n",
-    "#                 print(ss.keys())\n",
     "                if 'data' in ss.keys():\n",
-    "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
     "                    ss['mode'] = ss['sensed_mode']\n",
-    "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
-    "                gts_dur = 0\n",
-    "                for gts in trip['gts_timeline']:\n",
-    "                    if ss['end_ts'] >= gts['start_ts'] and ss['start_ts'] <= gts['end_ts']:\n",
-    "                        dur = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
-    "                        gts_dur += dur\n",
-    "                        if BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
-    "                            TP[mode] = TP.setdefault(mode, 0) + dur\n",
-    "                            if mode == 'TRAIN':\n",
-    "                                pass\n",
-    "#                                 print(TP[mode])\n",
-    "                        elif BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] != BASE_MODE[gts['mode']]:\n",
-    "                            FP[mode] = FP.setdefault(mode, 0) + dur\n",
-    "                        elif BASE_MODE[mode] != BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
-    "                            FN[mode] = FN.setdefault(mode, 0) + dur\n",
+    "                x = np.linspace(ss['start_ts'], ss['end_ts'], len(ss['distances']))\n",
+    "                d = sp.interpolate.interp1d(x, np.cumsum(ss['distances']))\n",
+    "                ss_dist  = np.array(ss['distances']).sum()\n",
+    "                comp_dist = 0\n",
+    "                for gts in trip['gts_timeline']:  \n",
+    "                    dist = 0\n",
+    "                    if gts['start_ts'] <= ss['start_ts'] and ss['end_ts'] <= gts['end_ts']:\n",
+    "                        dist = ss_dist\n",
+    "                        comp_dist += dist\n",
+    "                    elif ss['end_ts'] >= gts['start_ts'] and ss['start_ts'] <= gts['end_ts']:\n",
+    "                        a = max(ss['start_ts'], gts['start_ts'])\n",
+    "                        b = min(ss['end_ts'], gts['end_ts'])\n",
+    "                        if a == ss['start_ts']:\n",
+    "                            ## our sensed section ends before our ground truth section\n",
+    "                            dist = d(b) - d(a)\n",
+    "                            assert dist >= 0, f\"{dist}\"\n",
+    "                        elif b == ss['end_ts']:\n",
+    "                            ## our sensed starts after our ground truth section\n",
+    "                            dist = d(b) - d(a)\n",
+    "                            assert dist >= 0, f\"{dist}\"\n",
     "                        else:\n",
-    "                            TN[mode] = TN.setdefault(mode, 0) + dur\n",
-    "                leftover = ss_dur - gts_dur\n",
-    "                assert leftover >= 0, f\"ERROR, NEGATIVE LEFTOVER OF {leftover}, NEED TO INVESTIGATE\"\n",
+    "                            ## our sensed section starts after and ends before our ground truth section\n",
+    "                            dist = d(b) - d(a)\n",
+    "                            assert dist >= 0, f\"{dist}\"\n",
+    "                        assert dist >= 0, f\"{dist}\"\n",
+    "                        comp_dist += dist\n",
+    "                    if BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
+    "                        TP[mode] = TP.setdefault(mode, 0) + dist\n",
+    "                    elif BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] != BASE_MODE[gts['mode']]:\n",
+    "                        FP[mode] = FP.setdefault(mode, 0) + dist\n",
+    "                    elif BASE_MODE[mode] != BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
+    "                        FN[mode] = FN.setdefault(mode, 0) + dist\n",
+    "                    else:\n",
+    "                        TN[mode] = TN.setdefault(mode, 0) + dist\n",
+    "\n",
+    "                leftover = ss_dist - comp_dist\n",
+    "                assert leftover >= -1e-10, f\"\"\" \n",
+    "                ERROR, NEGATIVE LEFTOVER OF {leftover}, NEED TO INVESTIGATE\n",
+    "                sensed distance:   \\t {ss_dist}\n",
+    "                computed distance: \\t {comp_dist}\n",
+    "                mode:              \\t {mode}\n",
+    "                                      \"\"\"        \n",
     "                if leftover > 0:\n",
     "                    # invalid base mode maps to NO_GT mode\n",
     "                    if mode == 'INVALID':\n",
@@ -424,15 +532,6 @@
     "                    else:\n",
     "                        TN[mode] = TN.setdefault(mode, 0) + leftover\n",
     "    return TP, FP, FN, TN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "214eb548",
-   "metadata": {},
-   "source": [
-    "#### raw output binary tables\n",
-    "BASE MODES = `['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID']`"
    ]
   },
   {
@@ -486,10 +585,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rf_binary(os):\n",
+    "def get_rf_binary(os, pv):\n",
     "    BASE_MODE = IBMM\n",
     "    for role in ['HAHFDC', 'HAMFDC', 'MAHFDC']:\n",
-    "        df = pd.DataFrame(get_binary_class_in_sec(os, role, [rfv_la, rfv_ucb, rfv_sj], BASE_MODE)).fillna(0)\n",
+    "        df = pd.DataFrame(get_binary_class_in_sec(os, role, pv, BASE_MODE)).fillna(0)\n",
     "        df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'TRAIN', 'INVALID'])\n",
     "        dic={}\n",
     "        d = df.reset_index(drop=True)\n",
@@ -584,10 +683,12 @@
     "            gts_dur = 0\n",
     "            cm = {}\n",
     "            for gts in trip['gts_timeline']:\n",
+    "                dur = 0\n",
     "                if ss['end_ts'] >= gts['start_ts'] and ss['start_ts'] <= gts['end_ts']:\n",
     "                    dur = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
-    "                    gts_dur += dur\n",
-    "                    cm[gts['mode']] = cm.setdefault(gts['mode'], 0) + dur\n",
+    "                    \n",
+    "                gts_dur += dur\n",
+    "                cm[gts['mode']] = cm.setdefault(gts['mode'], 0) + dur\n",
     "            leftover = ss_dur - gts_dur\n",
     "            assert leftover >= 0, f\"ERROR, NEGATIVE LEFTOVER OF {leftover}, NEED TO INVESTIGATE\"\n",
     "            cm['NO_GT'] = cm.setdefault('NO_GT', 0) + leftover\n",
@@ -926,7 +1027,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_cm('ios')"
+    "get_rf_cm('ios', IBMM)"
    ]
   },
   {
@@ -954,7 +1055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_binary('ios',)"
+    "get_rf_binary('ios', [gisv_la, gisv_sj, gisv_ucb])"
    ]
   },
   {
@@ -964,7 +1065,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_binary('android')"
+    "get_rf_binary('android', [gisv_la, gisv_sj, gisv_ucb])"
    ]
   },
   {
